// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform home.methodName calls should transform home.getStaticURL calls 1`] = `
"function a(req) {
  req.getStaticURL.getAbsolute('/test');
}"
`;

exports[`transform home.methodName calls should transform home.getStaticURL.getRelative calls 1`] = `
"function a(req) {
  req.getStaticURL.getRelativeURL('/test');
}"
`;
